--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		rel="stylesheet">
 
 
-	<!-- script load for animejs -->
-	<script src="./assets/js/anime.min.js"></script>
+	<!-- script load for aos -->
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<style>
 		.sticky {
 			position: fixed;
@@ -141,6 +141,7 @@
 					<div
 						class="mx-6 lg:mr-0 lg:ml-20 overflow-hidden leading-10 flex flex-col py-44 md:py-0 md:justify-center h-full relative">
 						<h3
+							data-aos="fade-right"
 							class="md:w-[45%] text-shadow-hero-lg text-[#30608F] text-5xl font-semibold md:font-extrabold md:mb-1 lg:mb-2 md:text-7xl lg:text-7xl">
 							NYALA MIMPI INDONESIA, <br>
 							PANCARMU <span class="bg-orange-600 text-white">TERANGI DUNIA</span>
@@ -153,7 +154,7 @@
 			</div>
 		</section>
 		<section id="logo" class="mb-16 lg:mb-32">
-			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
+			<div data-aos="fade-right" class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-28 lg:pb-8 font-bold uppercase">SEASCAPED
 					PHILOSOPHY</h2>
 			</div>
@@ -161,7 +162,7 @@
 				<div class="flex justify-center lg:w-5/12">
 					<img class="h-60 lg:h-96 my-12 lg:my-0" src="./assets/logo/mercusuar.png" alt>
 				</div>
-				<div class="px-4 font-medium lg:w-7/12 lg:text-[22px]">
+				<div class="px-4 font-medium lg:w-7/12 lg:text-[22px]" data-aos="fade-right">
 					<p class="mb-4"><span class="text-primary font-bold text-lg lg:text-3xl">Mercusuar</span> dan <span
 							class="text-secondary-dark font-bold text-lg lg:text-3xl">sinarnya</span> diibaratkan
 						sebagai simbol kekuatan dan harapan bagi setiap
@@ -175,7 +176,7 @@
 			</div>
 		</section>
 		<section class="mb-32">
-			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
+			<div data-aos="fade-right" class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">Citra & Lakshya
 				</h2>
 			</div>
@@ -185,7 +186,7 @@
 						src="./assets/maskot/citra-lakshya_2.png" alt>
 				</div>
 				<div class="lg:order-1 px-4 lg:px-0 font-medium mt-6 lg:w-7/12 lg:text-[22px] lg:text-right">
-					<p class="md:mb-4">
+					<p data-aos="fade-right" class="md:mb-4">
 						Citra dan Lakshya adalah pasangan manusia yang diilustrasikan sebagai pelaut atau nahkoda kapal,
 						dituntun oleh sinar mercusuar untuk menjaga arah dan tujuan. Citra melambangkan keberagaman para
 						awardee LPDP PK-237, sedangkan Lakshya menyimbolkan tujuan bersama mereka untuk berkontribusi
@@ -194,7 +195,7 @@
 					<div class="lg:order-2 flex md:hidden justify-center lg:w-5/12">
 						<img class="w-10/12" src="./assets/maskot/citra-lakshya_2.png" alt>
 					</div>
-					<p>
+					<p data-aos="fade-right">
 						Maskot ini didominasi warna biru, yang melambangkan profesionalisme, percaya diri, loyalitas,
 						dan tanggung jawab para peserta PK-237 LPDP. Batik yang dikenakan oleh Citra dan Lakshya sebagai
 						simbol cinta tanah air Indonesia serta slayer yang tersemat di leher mempertegas identitas
@@ -212,11 +213,11 @@
 					<img class="object-cover h-full w-full brightness-[.35]" src="./assets/img/deepsea.jpg" alt>
 				</div>
 				<div class="p-0 text-white">
-					<h2 class="text-3xl lg:text-8xl text-center py-12 pt-28 font-bold uppercase">Meet the
+					<h2 data-aos="fade-right" class="text-3xl lg:text-8xl text-center py-12 pt-28 font-bold uppercase">Meet the
 						Sailor</h2>
 				</div>
 				<div class="w-full h-full flex items-center -translate-y-32 relative lg:w-8/12 mx-auto">
-					<div id="representative" class="owl-carousel owl-theme">
+					<div data-aos="fade" id="representative" class="owl-carousel owl-theme">
 						<div class="item">
 							<img class="h-72 lg:h-96 object-contain" src="./assets/representatives/siwi.webp" alt>
 							<div class="text-center text-white text-sm lg:text-lg my-6">
@@ -262,26 +263,26 @@
 			<div class="w-full relative -mt-1 pb-12 bg-gradient-to-b from-[#00171e] to-black">
 				<div class=" h-full w-full absolute -z-10"></div>
 				<div class="p-0 text-white pt-32">
-					<h2 class="text-3xl lg:text-8xl text-center pb-2  lg:pb-4 font-bold glow uppercase">Treasure Map
+					<h2 data-aos="fade-right" class="text-3xl lg:text-8xl text-center pb-2  lg:pb-4 font-bold glow uppercase">Treasure Map
 					</h2>
 					<div>
 						<img class="w-1/2 mx-auto" src="/assets/img/line-yellow.png" alt>
 					</div>
 				</div>
 				<div class="mt-4 mb-8 text-white w-10/12 md:w-2/3 mx-auto text-center">
-					<p class="text-xs sm:text-sm md:text-lg">
+					<p data-aos="fade-right" class="text-xs sm:text-sm md:text-lg">
 						Unveiling Indonesia's enchanted map, this section reveals the luminous origins of LPDP awardees,
 						with each province sparkling with the count of scholars, weaving a magical tapestry of
 						knowledge.
 					</p>
 				</div>
-				<div id="demografi" class="w-full relative z-40"></div>
+				<div data-aos="fade" id="demografi" class="w-full relative z-40"></div>
 				<div class="relative z-40 flex flex-col md:flex-row items-center mt-16 md:mt-32 gap-8 md:gap-0">
-					<div class="w-10/12 md:w-1/2 flex flex-col items-center">
+					<div data-aos="fade" class="w-10/12 md:w-1/2 flex flex-col items-center">
 						<h3 class="text-white font-bold mb-8 text-2xl text-center">Jenis Kelamin</h3>
 						<div id="gender" class=""></div>
 					</div>
-					<div class="w-10/12 md:w-1/2 flex flex-col items-center">
+					<div data-aos="fade" class="w-10/12 md:w-1/2 flex flex-col items-center">
 						<h3 class="text-white font-bold mb-8 text-2xl text-center">Beasiswa</h3>
 						<div id="scholarship"></div>
 					</div>
@@ -295,13 +296,13 @@
 		</div>
 
 		<section id="member" class="lg:pb-32 relative overflow-hidden pt-10">
-			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
+			<div data-aos="fade-right" class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-16 lg:pb-8 font-bold uppercase">
 					THE IMPRESIVE CREW
 				</h2>
 			</div>
 
-			<div
+			<div data-aos="fade"
 				class="text-primary grid grid-rows-3 my-4 grid-flow-col gap-4 md:flex md:justify-center md:gap-12 font-medium mb-4">
 				<div class="hover:text-primary-light">
 					<a class="flex flex-col items-center crew-button active active-animation" href="#groupOne">
@@ -335,10 +336,7 @@
 				</div>
 			</div>
 			<div class="w-5/6 lg:w-11/12 mx-auto">
-				<div>
-					<img src alt>
-				</div>
-				<div id="crew" class="owl-carousel owl-theme">
+				<div data-aos="fade" id="crew" class="owl-carousel owl-theme">
 					<div class="item gap-4" data-hash="groupOne">
 						<div id="group1"
 							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4 ">
@@ -379,14 +377,14 @@
 		</section>
 
 		<section id="gallery" class="pb-24 lg:pb-44 relative pt-10">
-			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
+			<div data-aos="fade-right" class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-16 lg:pb-8 font-bold uppercase">
 					COMMUNITY GATHERING
 				</h2>
 			</div>
 
 			<div class="w-full lg:w-10/12 mx-auto p-4 md:p-0">
-				<div id="community" class="owl-carousel owl-theme">
+				<div data-aos="fade" id="community" class="owl-carousel owl-theme">
 					<div class="item">
 						<div class="w-full text-center">
 							<span class="text-lg">Banyumas</span>
@@ -612,7 +610,7 @@
 						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
 								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
-									<img class="object-cover object-bottom rounded-2xl w-full h-full"
+									<img class="object-cover object-bottom rounded-2xl mx-auto !w-auto h-full"
 										src="./assets/img/kopdar/maluku-utara.jpeg" alt>
 								</div>
 							</div>
@@ -650,7 +648,7 @@
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
-									<img class="object-cover object-center rounded-2xl w-full h-full"
+									<img class="object-cover object-top rounded-2xl w-full h-full"
 										src="./assets/img/kopdar/soloraya2.jpg" alt>
 								</div>
 							</div>
@@ -761,16 +759,16 @@
 			<img class="object-cover h-full bottom-0 w-full brightness-[.15]" src="./assets/img/deepsea.jpg" alt>
 		</div>
 		<div class=" h-full w-full">
-			<div class="p-0 text-white">
+			<div data-aos="fade-right" class="p-0 text-white">
 				<h2 class="text-3xl lg:text-8xl text-center pt-16 lg:pb-16 font-bold uppercase">Overview</h2>
 			</div>
 
 			<div class="">
-				<div id="df_manual_book" class="_df_book !bg-transparent" height="500" webgl="true" scrollWheel="false"
+				<div data-aos="fade" id="df_manual_book" class="_df_book !bg-transparent" height="500" webgl="true" scrollWheel="false"
 					source="assets/pdf/Selayang Pandang PK-237.pdf">
 				</div>
 				<div class="mt-10 text-white w-10/12 md:w-2/3 mx-auto text-center">
-					<p class="text-xs sm:text-sm md:text-xl">
+					<p data-aos="fade-right" class="text-xs sm:text-sm md:text-xl">
 						Bound by dreams and destiny, LPDP awardees weave memories into a luminous legacy of wisdom.
 						Each moment, a sparkling gem, reflects the brilliance of a future crafted by intellect and hope,
 						a
@@ -941,13 +939,9 @@
 	</script>
 
 	<script src="./assets/js/splashscreen.js"></script>
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>
-		AOS.init({
-			mirror: false,
-			once: true,
-			duration: 500,
-		});
+		AOS.init({once: true});
 	</script>
 
 	<script src="https://code.highcharts.com/maps/highmaps.js"></script>
