fix: change taufik image, feat: add bakcground in crew section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							PANCARMU <span class="bg-orange-600 text-white">TERANGI DUNIA</span>
 							<img class="h-8 lg:h-12 inline-block" src="./assets/img/wave-icon.png" alt>
 						</h3>
-						<img class="w-3/4 md:w-1/2 absolute -right-10 lg:-right-0 -bottom-5 lg:-bottom-20 animate-wave"
+						<img class="w-3/4 md:w-1/2 absolute -right-10 lg:-right-0 -bottom-5 lg:-bottom-20 animate-wave a"
 							src="/assets/maskot/citra-lakshya_1.png" alt>
 					</div>
 				</div>
@@ -219,35 +219,35 @@
 				<div class="w-full h-full flex items-center -translate-y-32 relative lg:w-8/12 mx-auto">
 					<div data-aos="fade" id="representative" class="owl-carousel owl-theme">
 						<div class="item">
-							<img class="h-72 lg:h-96 object-contain" src="./assets/representatives/siwi.webp" alt>
+							<img class="h-72 lg:h-80 object-contain" src="./assets/representatives/siwi.webp" alt>
 							<div class="text-center text-white text-sm lg:text-lg my-6">
 								<span class="block font-semibold">Ketua Angkatan</span>
 								<span class="block">Siwi Mauliddia Handayani</span>
 							</div>
 						</div>
 						<div class="item">
-							<img class="h-72 lg:h-96 object-contain" src="./assets/representatives/taufik.webp" alt>
+							<img class="h-72 lg:h-80 object-contain" src="./assets/representatives/taufik-1.webp" alt>
 							<div class="text-center text-white text-sm lg:text-lg my-6">
 								<span class="block font-semibold">Koor. Bidang Kreatif dan Multimedia</span>
 								<span class="block">Taufik Hidayat</span>
 							</div>
 						</div>
 						<div class="item">
-							<img class="h-72 lg:h-96 object-contain" src="./assets/representatives/putri.webp" alt>
+							<img class="h-72 lg:h-80 object-contain" src="./assets/representatives/putri.webp" alt>
 							<div class="text-center text-white text-sm lg:text-lg my-6">
 								<span class="block font-semibold">Koor. Administrasi dan Database</span>
 								<span class="block">Putri Shania Noor</span>
 							</div>
 						</div>
 						<div class="item">
-							<img class="h-72 lg:h-96 object-contain" src="./assets/representatives/protasius.webp" alt>
+							<img class="h-72 lg:h-80 object-contain" src="./assets/representatives/protasius.webp" alt>
 							<div class="text-center text-white text-sm lg:text-lg my-6">
 								<span class="block font-semibold">Koor. Program dan Humas</span>
 								<span class="block">Protasius D. P. B. Isyudanto</span>
 							</div>
 						</div>
 						<div class="item">
-							<img class="h-72 lg:h-96 object-contain" src="./assets/representatives/arief.webp" alt>
+							<img class="h-72 lg:h-80 object-contain" src="./assets/representatives/arief.webp" alt>
 							<div class="text-center text-white text-sm lg:text-lg my-6">
 								<span class="block font-semibold">Koor. Bidang Transportasi dan Logistik</span>
 								<span class="block">Arief Abdurrahman Hakim</span>
@@ -303,7 +303,7 @@
 			</div>
 
 			<div data-aos="fade"
-				class="text-primary grid grid-rows-3 my-4 grid-flow-col gap-4 md:flex md:justify-center md:gap-12 font-medium mb-4">
+				class="text-primary grid grid-rows-3 my-4 grid-flow-col gap-4 md:flex md:justify-center md:gap-12 font-medium mb-8">
 				<div class="hover:text-primary-light">
 					<a class="flex flex-col items-center crew-button active active-animation" href="#groupOne">
 						<span class="font-semibold">Alugoro</span>
@@ -335,36 +335,43 @@
 					</a>
 				</div>
 			</div>
+			
+			<div class="absolute -z-10 w-full -mt-3">
+				<img class="relative grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/jogja.jpg" alt="">
+				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/soloraya.jpg" alt="">
+				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/tangsel2.jpeg" alt="">
+				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/jakpus2.jpeg" alt="">
+			</div>
 			<div class="w-5/6 lg:w-11/12 mx-auto">
-				<div data-aos="fade" id="crew" class="owl-carousel owl-theme">
+				<div data-aos="fade" id="crew" class="owl-carousel owl-theme text-white">
 					<div class="item gap-4" data-hash="groupOne">
 						<div id="group1"
-							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4 ">
+							class="bg-[#30608F] backdrop-blur-sm bg-opacity-70 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4 ">
 						</div>
 					</div>
 					<div class="item" data-hash="groupTwo">
 						<div id="group2"
-							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
+							class="bg-[#30608F] backdrop-blur-sm bg-opacity-70 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
 						</div>
 					</div>
 					<div class="item" data-hash="groupThree">
 						<div id="group3"
-							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
+							class="bg-[#30608F] backdrop-blur-sm bg-opacity-70 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
 						</div>
 					</div>
 					<div class="item" data-hash="groupFour">
 						<div id="group4"
-							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
+							class="bg-[#30608F] backdrop-blur-sm bg-opacity-70 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
 						</div>
 					</div>
 					<div class="item" data-hash="groupFive">
 						<div id="group5"
-							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
+							class="bg-[#30608F] backdrop-blur-sm bg-opacity-70 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
 						</div>
 					</div>
 					<div class="item" data-hash="groupSix">
 						<div id="group6"
-							class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
+							class="bg-[#30608F] backdrop-blur-sm bg-opacity-70 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4">
 						</div>
 					</div>
 				</div>
