fix: compress all image in community section and selayang pandang pdf

--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@
 			</div>
 			
 			<div class="absolute -z-10 w-full -mt-3">
-				<img class="relative grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/jogja.jpg" alt="">
-				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/soloraya.jpg" alt="">
-				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/tangsel2.jpeg" alt="">
-				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/jakpus2.jpeg" alt="">
+				<img class="relative grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/jogja.webp" alt="">
+				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/soloraya.webp" alt="">
+				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/tangsel2.webp" alt="">
+				<img class="relative md:hidden grayscale opacity-40 h-[520px] w-full object-cover" src="./assets/img/kopdar/jakpus2.webp" alt="">
 			</div>
 			<div class="w-5/6 lg:w-11/12 mx-auto">
 				<div data-aos="fade" id="crew" class="owl-carousel owl-theme text-white">
@@ -400,13 +400,13 @@
 							<div class="flex items-center">
 								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-right md:object-center rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/banyumas.jpg" alt>
+										src="./assets/img/kopdar/banyumas.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-40 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-top rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/banyumas2.jpg" alt>
+										src="./assets/img/kopdar/banyumas2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -419,13 +419,13 @@
 							<div class="flex items-center">
 								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/bogor.jpg" alt>
+										src="./assets/img/kopdar/bogor.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
 								<div class="md:h-52 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/bogor2.jpg" alt>
+										src="./assets/img/kopdar/bogor2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -438,13 +438,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/depok.jpg" alt>
+										src="./assets/img/kopdar/depok.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-top rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/depok2.jpg" alt>
+										src="./assets/img/kopdar/depok2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -457,13 +457,13 @@
 							<div class="flex items-center">
 								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jakpus.jpeg" alt>
+										src="./assets/img/kopdar/jakpus.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-40 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jakpus2.jpeg" alt>
+										src="./assets/img/kopdar/jakpus2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -476,7 +476,7 @@
 							<div class="flex items-center">
 								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/gorontalo.png" alt>
+										src="./assets/img/kopdar/gorontalo.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -490,13 +490,13 @@
 							<div class="flex items-center">
 								<div class="md:w-full w-[22rem] md:h-36 h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jabar.jpg" alt>
+										src="./assets/img/kopdar/jabar.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:w-full w-[22rem] md:h-36 h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jabar2.jpg" alt>
+										src="./assets/img/kopdar/jabar2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -509,13 +509,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-top rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/tangsel.jpeg" alt>
+										src="./assets/img/kopdar/tangsel.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
 								<div class="md:h-52 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-bottom md:object-center rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/tangsel2.jpeg" alt>
+										src="./assets/img/kopdar/tangsel2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -528,13 +528,13 @@
 							<div class="flex items-center">
 								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jatim.jpg" alt>
+										src="./assets/img/kopdar/jatim.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
 								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jatim2.jpg" alt>
+										src="./assets/img/kopdar/jatim2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -547,13 +547,13 @@
 							<div class="flex items-center">
 								<div class="md:h-52 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/kalbar.jpg" alt>
+										src="./assets/img/kopdar/kalbar.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/kalbar2.jpg" alt>
+										src="./assets/img/kopdar/kalbar2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -566,13 +566,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/lampung.jpeg" alt>
+										src="./assets/img/kopdar/lampung.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/lampung.jpeg" alt>
+										src="./assets/img/kopdar/lampung.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -585,7 +585,7 @@
 							<div class="flex items-center">
 								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/maluku.jpg" alt>
+										src="./assets/img/kopdar/maluku.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -599,13 +599,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/ntt-ntb.jpg" alt>
+										src="./assets/img/kopdar/ntt-ntb.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/ntt-ntb.jpg" alt>
+										src="./assets/img/kopdar/ntt-ntb.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -618,7 +618,7 @@
 							<div class="flex items-center">
 								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl mx-auto !w-auto h-full"
-										src="./assets/img/kopdar/maluku-utara.jpeg" alt>
+										src="./assets/img/kopdar/maluku-utara.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -631,13 +631,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/semarang-raya.jpg" alt>
+										src="./assets/img/kopdar/semarang-raya.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/semarang-raya2.jpg" alt>
+										src="./assets/img/kopdar/semarang-raya2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -650,13 +650,13 @@
 							<div class="flex items-center">
 								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/soloraya.jpg" alt>
+										src="./assets/img/kopdar/soloraya.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-top rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/soloraya2.jpg" alt>
+										src="./assets/img/kopdar/soloraya2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -669,7 +669,7 @@
 							<div class="flex items-center">
 								<div class="md:w-64 w-[22rem] md:h-full h-[28rem] rounded-3xl">
 									<img class="object-cover object-bottom rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sulsel.jpg" alt>
+										src="./assets/img/kopdar/sulsel.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -682,13 +682,13 @@
 							<div class="flex items-center">
 								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sulut.jpg" alt>
+										src="./assets/img/kopdar/sulut.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-center rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sulut2.jpg" alt>
+										src="./assets/img/kopdar/sulut2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -701,13 +701,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sumsel.jpeg" alt>
+										src="./assets/img/kopdar/sumsel.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-contain object-center rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sumsel2.jpeg" alt>
+										src="./assets/img/kopdar/sumsel2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -720,13 +720,13 @@
 							<div class="flex items-center">
 								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sumut.png" alt>
+										src="./assets/img/kopdar/sumut.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/sumut2.jpeg" alt>
+										src="./assets/img/kopdar/sumut2.webp" alt>
 								</div>
 							</div>
 						</div>
@@ -739,13 +739,13 @@
 							<div class="flex items-center">
 								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jogja.jpg" alt>
+										src="./assets/img/kopdar/jogja.webp" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="md:h-48 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full"
-										src="./assets/img/kopdar/jogja2.jpg" alt>
+										src="./assets/img/kopdar/jogja2.webp" alt>
 								</div>
 							</div>
 						</div>
