--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 </head>
 
 <body>
+	<audio class="hidden" controls autoplay loop>
+			<source src="./assets/audio/Lagu Angkatan Mercusuar PK-237 LPDP Menyala Indonesiaku  Official Lyrics Video.mp3" type="audio/mpeg">
+			Your browser does not support the audio element.
+	</audio>
 	<!-- LOAD ANIMATION START -->
 	<div class="start-animation-bg fixed z-[99999] h-full w-full bg-neutral-50">
 		<div class="proudly-present-container relative flex h-full w-full items-center opacity-0">
@@ -333,7 +337,7 @@
 
 			<div class="absolute -z-10 -mt-3 w-full">
 				<img class="relative h-[520px] w-full object-cover opacity-40 grayscale"
-					src="./assets/img/kopdar/jogja.webp" alt />
+					src="./assets/img/bg-crew.webp" alt />
 				<img class="relative h-[520px] w-full object-cover opacity-40 grayscale md:hidden"
 					src="./assets/img/kopdar/soloraya.webp" alt />
 				<img class="relative h-[520px] w-full object-cover opacity-40 grayscale md:hidden"
