--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-	<audio class="hidden" controls autoplay loop>
+	<audio id="playAudio" class="hidden" controls autoplay loop>
 			<source src="./assets/audio/Lagu Angkatan Mercusuar PK-237 LPDP Menyala Indonesiaku  Official Lyrics Video.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 	</audio>
@@ -852,6 +852,25 @@
 	<script src="./assets/js/community.js"></script>
 	<script src="./assets/js/crew.js"></script>
 	<script src="./assets/js/splashscreen.js"></script>
+	<script>
+		 document.addEventListener('DOMContentLoaded', function() {
+					function playAudio() {
+							var audio = document.getElementById('playAudio');
+							audio.play().then(() => {
+                    console.log('Audio started playing.');
+										document.removeEventListener('click', playAudio); // Remove event listener after first interaction
+										document.removeEventListener('mousemove', playAudio); // Remove event listener after first interaction
+                }).catch(error => {
+                    console.error('Failed to start audio:', error);
+                });
+
+					}
+					
+					// Add event listeners for the first user interaction
+					document.addEventListener('click', playAudio);
+					document.addEventListener('mousemove', playAudio);
+			});
+	</script>
 </body>
 
 </html>
