--- a/index.html
+++ b/index.html
@@ -854,8 +854,8 @@
 	<script src="./assets/js/splashscreen.js"></script>
 	<script>
 		 document.addEventListener('DOMContentLoaded', function() {
+			 const audio = document.getElementById('playAudio');
 					function playAudio() {
-							var audio = document.getElementById('playAudio');
 							audio.play().then(() => {
                     console.log('Audio started playing.');
 										document.removeEventListener('click', playAudio); // Remove event listener after first interaction
@@ -869,6 +869,7 @@
 					// Add event listeners for the first user interaction
 					document.addEventListener('click', playAudio);
 					document.addEventListener('mousemove', playAudio);
+					playAudio()
 			});
 	</script>
 </body>
