feat: delete bg color in section member

--- a/index.html
+++ b/index.html
@@ -368,32 +368,32 @@
 				<div id="crew" class="owl-carousel owl-theme text-white" data-aos="fade">
 					<div class="item gap-4" data-hash="groupAlugoro">
 						<div id="alugoro"
-							class="flex flex-wrap justify-center gap-4 rounded-2xl bg-[#30608F] bg-opacity-70 p-4 text-center backdrop-blur-sm">
+							class="flex flex-wrap justify-center gap-4 rounded-2xl text-black drop-shadow-sm p-4 text-center font-bold italic">
 						</div>
 					</div>
 					<div class="item" data-hash="groupArdadedali">
 						<div id="ardadedali"
-							class="flex flex-wrap justify-center gap-4 rounded-2xl bg-[#30608F] bg-opacity-70 p-4 text-center backdrop-blur-sm">
+							class="flex flex-wrap justify-center gap-4 rounded-2xl text-black drop-shadow-sm p-4 text-center font-bold italic">
 						</div>
 					</div>
 					<div class="item" data-hash="groupHalasan">
 						<div id="halasan"
-							class="flex flex-wrap justify-center gap-4 rounded-2xl bg-[#30608F] bg-opacity-70 p-4 text-center backdrop-blur-sm">
+							class="flex flex-wrap justify-center gap-4 rounded-2xl text-black drop-shadow-sm p-4 text-center font-bold italic">
 						</div>
 					</div>
 					<div class="item" data-hash="groupMandau">
 						<div id="mandau"
-							class="flex flex-wrap justify-center gap-4 rounded-2xl bg-[#30608F] bg-opacity-70 p-4 text-center backdrop-blur-sm">
+							class="flex flex-wrap justify-center gap-4 rounded-2xl text-black drop-shadow-sm p-4 text-center font-bold italic">
 						</div>
 					</div>
 					<div class="item" data-hash="groupNagapasa">
 						<div id="nagapasa"
-							class="flex flex-wrap justify-center gap-4 rounded-2xl bg-[#30608F] bg-opacity-70 p-4 text-center backdrop-blur-sm">
+							class="flex flex-wrap justify-center gap-4 rounded-2xl text-black drop-shadow-sm p-4 text-center font-bold italic">
 						</div>
 					</div>
 					<div class="item" data-hash="groupSampari">
 						<div id="sampari"
-							class="flex flex-wrap justify-center gap-4 rounded-2xl bg-[#30608F] bg-opacity-70 p-4 text-center backdrop-blur-sm">
+							class="flex flex-wrap justify-center gap-4 rounded-2xl text-black drop-shadow-sm p-4 text-center font-bold italic">
 						</div>
 					</div>
 				</div>
